// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWrapper renders correctly 1`] = `
<table>
  <tbody>
    <Component
      onResize={[MockFunction]}
      onScroll={[MockFunction]}
      trRef={
        [MockFunction] {
          "calls": Array [
            Array [
              <tr
                class=""
              />,
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
    >
      <ComponentWithOuia
        component={[Function]}
        componentProps={
          Object {
            "onResize": [MockFunction],
            "onScroll": [MockFunction],
            "trRef": [MockFunction] {
              "calls": Array [
                Array [
                  <tr
                    class=""
                  />,
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            },
          }
        }
        consumerContext={null}
      >
        <RowWrapper
          className=""
          onResize={[MockFunction]}
          onScroll={[MockFunction]}
          ouiaContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
          row={
            Object {
              "isExpanded": undefined,
              "isHeightAuto": undefined,
              "isOpen": undefined,
            }
          }
          rowProps={null}
          trRef={
            [MockFunction] {
              "calls": Array [
                Array [
                  <tr
                    class=""
                  />,
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
        >
          <tr
            className=""
            hidden={false}
          />
        </RowWrapper>
      </ComponentWithOuia>
    </Component>
  </tbody>
</table>
`;

exports[`RowWrapper renders expanded correctly 1`] = `
<table>
  <tbody>
    <Component
      row={
        Object {
          "isExpanded": true,
        }
      }
    >
      <ComponentWithOuia
        component={[Function]}
        componentProps={
          Object {
            "row": Object {
              "isExpanded": true,
            },
          }
        }
        consumerContext={null}
      >
        <RowWrapper
          className=""
          ouiaContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
          row={
            Object {
              "isExpanded": true,
            }
          }
          rowProps={null}
        >
          <tr
            className="pf-c-table__expandable-row pf-m-expanded"
            hidden={false}
          />
        </RowWrapper>
      </ComponentWithOuia>
    </Component>
  </tbody>
</table>
`;
